--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -8,6 +8,8 @@
   display: none;
 }
 body {
+  display: flex;
+  flex-direction: column;
   background-image: url("https://media.istockphoto.com/photos/sea-sand-on-blue-wooden-floortop-view-with-copy-space-picture-id1034297446?k=20&m=1034297446&s=612x612&w=0&h=czphF7-SugdCFouO4_mUaU-YU8iMIcRqbqqHIfirfwA=");
   background-repeat: no-repeat;
   background-position: center;
@@ -41,6 +43,7 @@ ul {
   border-radius: 10px;
   padding: 10px;
   background-color: wheat;
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width: 768px) {
